# plush-rust

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 01__create_tables.sql  02__insert_initial_data.sql
src/: main.rs
