[package]
name = "plush-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
anyhow = "1.0.95"
chrono = "0.4.39"
