[package]
name = "plush-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "plush_rust"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls","chrono"] }
anyhow = "1.0.95"
chrono = { version = "0.4.42", features = ["serde"] }
